--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Yichen Wu</title>
-	<link rel="shortcut icon" href="myfavicon.ico" type="image/x-icon">
-	<link rel="icon" href="myfavicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="myfavicon.ico" type="image/x-icon">
+    <link rel="icon" href="myfavicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -15,134 +15,150 @@
 </head>
 
 <body>
-    <div id="mobile-menu-open" class="shadow-large">
-        <i class="fa fa-bars" aria-hidden="true"></i>
+<div id="mobile-menu-open" class="shadow-large">
+    <i class="fa fa-bars" aria-hidden="true"></i>
+</div>
+<!-- End #mobile-menu-toggle -->
+<header>
+    <div id="mobile-menu-close">
+        <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
     </div>
-    <!-- End #mobile-menu-toggle -->
-    <header>
-        <div id="mobile-menu-close">
-            <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
-        </div>
-        <ul id="menu" class="shadow">
-            <li>
-                <a href="#about">About</a>
-            </li>
-            <li>
-                <a href="#experience">Experience</a>
-            </li>
-            <li>
-                <a href="#education">Education</a>
-            </li>
-            <li>
-                <a href="#projects">Projects</a>
-            </li>
-            <li>
-                <a href="#skills">Skills</a>
-            </li>
-            <li>
-                <a href="#contact">Contact</a>
-            </li>
-        </ul>
-    </header>
-    <!-- End header -->
+    <ul id="menu" class="shadow">
+        <li>
+            <a href="#about">About</a>
+        </li>
+        <li>
+            <a href="#experience">Experience</a>
+        </li>
+        <li>
+            <a href="#journal">Journal</a>
+        </li>
+        <li>
+            <a href="#projects">Life</a>
+        </li>
+    </ul>
+</header>
+<!-- End header -->
 
-    <div id="lead">
+<div id="lead">
+    <div id="tsparticles">
         <div id="lead-content">
             <img class="user" src="./images/avatar.png">
-            <h2>Yichen Wu</h2>
+            <h2 style="margin-top: 2em">Hi, I'm Yichen Wu. I'm a</h2>
             <h3>Software Developer | Gym Goer | Photophile | Melophile | Zoophilist | To Be Continued...</h3>
-<!--            <a href="#" class="btn-rounded-white">Download Resume</a>-->
         </div>
-        <!-- End #lead-content -->
+    </div>
+</div>
+<!-- End #lead-content -->
 
-        <div id="lead-overlay"></div>
+<!--    <div id="lead-overlay"></div>-->
 
-        <div id="lead-down">
+<div id="lead-down">
             <span>
                 <i class="fa fa-chevron-down" aria-hidden="true"></i>
             </span>
+</div>
+<!-- End #lead-down -->
+
+<!-- End #lead -->
+
+<div id="about">
+    <h2 class="heading">About Me</h2>
+    <h3  style="margin-top: 2em; color: #dcd9d9">About Me pages on websites, blogs, and social media can be dry and boring
+        when they follow a standard format. If you want to create an unforgettable page for yourself or your
+        company, start by checking out some of the best examples of About Me pages on the web.</h3>
+    <div class="container">
+
+        <div class="row">
+            <div class="col-6 col-md-4"></div>
+            <div class="col-6 col-md-4"></div>
+            <div class="col-6 col-md-4"></div>
         </div>
-        <!-- End #lead-down -->
+
+
+        <!--        <div class="row">-->
+        <!--            <div class="col-md-4">-->
+        <!--                <h2 class="heading">About Me</h2>-->
+        <!--            </div>-->
+        <!--            <div class="col-md-8">-->
+        <!--                <p>-->
+        <!--                    About me-->
+        <!--                </p>-->
+        <!--            </div>-->
+        <!--        </div>-->
     </div>
-    <!-- End #lead -->
+</div>
+<!-- End #about -->
 
-<!--    <div id="about">-->
-<!--        <div class="container">-->
-<!--            <div class="row">-->
-<!--                <div class="col-md-4">-->
-<!--                    <h2 class="heading">About Me</h2>-->
-<!--                </div>-->
-<!--                <div class="col-md-8">-->
-<!--                    <p>-->
-<!--                       About me-->
-<!--                    </p>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-    <!-- End #about -->
+<div id="experience" class="background-alt">
+    <h2 class="heading">Experience</h2>
+    <div id="experience-timeline">
+        <div data-date="September 2015 – September 2016">
+            <h3>Employer Name</h3>
+            <h4>Job Title</h4>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet
+                urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi
+                dapibus porta quam laoreet placerat.
+            </p>
+        </div>
 
-<!--    <div id="experience" class="background-alt">-->
-<!--        <h2 class="heading">Experience</h2>-->
-<!--        <div id="experience-timeline">-->
-<!--            <div data-date="September 2015 – September 2016">-->
-<!--                <h3>Employer Name</h3>-->
-<!--                <h4>Job Title</h4>-->
-<!--                <p>-->
-<!--                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.-->
-<!--                </p>-->
-<!--            </div>-->
+        <div data-date="September 2015 – September 2016">
+            <h3>Employer Name</h3>
+            <h4>Job Title</h4>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet
+                urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi
+                dapibus porta quam laoreet placerat.
+            </p>
+        </div>
 
-<!--            <div data-date="September 2015 – September 2016">-->
-<!--                <h3>Employer Name</h3>-->
-<!--                <h4>Job Title</h4>-->
-<!--                <p>-->
-<!--                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.-->
-<!--                </p>-->
-<!--            </div>-->
+        <div data-date="September 2015 – September 2016">
+            <h3>Employer Name</h3>
+            <h4>Job Title</h4>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet
+                urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi
+                dapibus porta quam laoreet placerat.
+            </p>
+        </div>
+    </div>
+</div>
+<!-- End #experience -->
 
-<!--            <div data-date="September 2015 – September 2016">-->
-<!--                <h3>Employer Name</h3>-->
-<!--                <h4>Job Title</h4>-->
-<!--                <p>-->
-<!--                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.-->
-<!--                </p>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-    <!-- End #experience -->
+<div id="education">
+    <h2 class="heading">Education</h2>
+    <div class="education-block">
+        <h3>University of Ottawa</h3>
+        <span class="education-date">Sept 2016 - Sept 2017</span>
+        <h4>Bachelor of Science in Computer Science</h4>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet
+            urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi
+            dapibus porta quam laoreet placerat.
+        </p>
+    </div>
+    <!-- End .education-block -->
 
-<!--    <div id="education">-->
-<!--        <h2 class="heading">Education</h2>-->
-<!--        <div class="education-block">-->
-<!--            <h3>University of Ottawa</h3>-->
-<!--            <span class="education-date">Sept 2016 - Sept 2017</span>-->
-<!--            <h4>Bachelor of Science in Computer Science</h4>-->
-<!--            <p>-->
-<!--                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.-->
-<!--            </p>-->
-<!--        </div>-->
-<!--        &lt;!&ndash; End .education-block &ndash;&gt;-->
-
-<!--        <div class="education-block">-->
-<!--            <h3>University of Ottawa</h3>-->
-<!--            <span class="education-date">Sept 2016 - Sept 2017</span>-->
-<!--            <h4>Bachelor of Science in Computer Science</h4>-->
-<!--            <ul>-->
-<!--                <li>-->
-<!--                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.-->
-<!--                </li>-->
-<!--                <li>-->
-<!--                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.-->
-<!--                </li>-->
-<!--                <li>-->
-<!--                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.-->
-<!--                </li>-->
-<!--            </ul>-->
-<!--        </div>-->
-<!--        &lt;!&ndash; End .education-block &ndash;&gt;-->
-<!--    </div>-->
-    <!-- End #education -->
+    <!--        <div class="education-block">-->
+    <!--            <h3>University of Ottawa</h3>-->
+    <!--            <span class="education-date">Sept 2016 - Sept 2017</span>-->
+    <!--            <h4>Bachelor of Science in Computer Science</h4>-->
+    <!--            <ul>-->
+    <!--                <li>-->
+    <!--                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.-->
+    <!--                </li>-->
+    <!--                <li>-->
+    <!--                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.-->
+    <!--                </li>-->
+    <!--                <li>-->
+    <!--                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.-->
+    <!--                </li>-->
+    <!--            </ul>-->
+    <!--        </div>-->
+    <!-- End .education-block -->
+</div>
+<!-- End #education -->
 
 <!--    <div id="projects" class="background-alt">-->
 <!--        <h2 class="heading">Projects</h2>-->
@@ -182,7 +198,7 @@
 <!--            </div>-->
 <!--        </div>-->
 <!--    </div>-->
-    <!-- End #projects -->
+<!-- End #projects -->
 
 <!--    <div id="skills">-->
 <!--        <h2 class="heading">Skills</h2>-->
@@ -215,7 +231,7 @@
 <!--            <li>Ruby on Rails</li>-->
 <!--        </ul>-->
 <!--    </div>-->
-    <!-- End #skills -->
+<!-- End #skills -->
 
 <!--    <div id="contact">-->
 <!--        <h2>Get in Touch</h2>-->
@@ -227,43 +243,139 @@
 <!--                <button type="submit">Send</button>-->
 <!--            </form>-->
 <!--        </div>-->
-<!--        &lt;!&ndash; End #contact-form &ndash;&gt;-->
-<!--    </div>-->
-    <!-- End #contact -->
+<!-- End #contact-form -->
+</div>
+<!-- End #contact -->
 
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-5 copyright">
-                    <p>
-                        Copyright &copy; 2021 Yichen Wu
-                    </p>
-                </div>
-                <div class="col-sm-2 top">
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-5 copyright">
+                <p>
+                    Copyright &copy; 2021 Yichen Wu
+                </p>
+            </div>
+            <div class="col-sm-2 top">
                     <span id="to-top">
                         <i class="fa fa-chevron-up" aria-hidden="true"></i>
                     </span>
-                </div>
-                <div class="col-sm-5 social">
-                    <ul>
-                        <li>
-                            <a href="https://github.com/wu-yichen" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://www.linkedin.com/in/yichen-wu-9229a095/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://www.flickr.com/photos/dragon_heel/" target="_blank"><i class="fa fa-flickr" aria-hidden="true"></i></a>
-                        </li>
-                    </ul>
-                </div>
+            </div>
+            <div class="col-sm-5 social">
+                <ul>
+                    <li>
+                        <a href="https://github.com/wu-yichen" target="_blank"><i class="fa fa-github"
+                                                                                  aria-hidden="true"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/yichen-wu-9229a095/" target="_blank"><i
+                                class="fa fa-linkedin" aria-hidden="true"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.flickr.com/photos/dragon_heel/" target="_blank"><i class="fa fa-flickr"
+                                                                                                aria-hidden="true"></i></a>
+                    </li>
+                    <li>
+                        <a href="mailto:panghu1900@gmail.com" target="_blank"><i class="fa fa-envelope-square"
+                                                                                 aria-hidden="true"></i></a>
+                    </li>
+                </ul>
             </div>
         </div>
-    </footer>
-    <!-- End footer -->
+    </div>
+</footer>
+<!-- End footer -->
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/scripts.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="js/scripts.min.js"></script>
+<!-- first include tsParticles -->
+<script src="https://cdn.jsdelivr.net/npm/tsparticles"></script>
+
+<!-- then include jquery wrapper -->
+<script src="https://cdn.jsdelivr.net/npm/jquery-particles"></script>
+<script>
+    $("#tsparticles")
+        .particles()
+        .init(
+            {
+                background: {
+                    color: {
+                        value: "#131212",
+                    }
+                },
+                fpsLimit: 60,
+                interactivity: {
+                    events: {
+                        onClick: {
+                            enable: true,
+                            mode: "push",
+                        },
+                        onHover: {
+                            enable: true,
+                            mode: "repulse",
+                        },
+                        resize: true,
+                    },
+                    modes: {
+                        bubble: {
+                            distance: 400,
+                            duration: 2,
+                            opacity: 0.8,
+                            size: 40,
+                        },
+                        push: {
+                            quantity: 4,
+                        },
+                        repulse: {
+                            distance: 200,
+                            duration: 0.4,
+                        },
+                    },
+                },
+                particles: {
+                    color: {
+                        value: "#30a056",
+                    },
+                    links: {
+                        color: "#30a056",
+                        distance: 150,
+                        enable: true,
+                        opacity: 0.2,
+                        width: 1,
+                    },
+                    collisions: {
+                        enable: true,
+                    },
+                    move: {
+                        direction: "none",
+                        enable: true,
+                        outMode: "bounce",
+                        random: false,
+                        speed: 1,
+                        straight: false,
+                    },
+                    number: {
+                        density: {
+                            enable: true,
+                            value_area: 1800,
+                        },
+                        value: 80,
+                    },
+                    opacity: {
+                        value: 0.5,
+                    },
+                    shape: {
+                        type: "diamond",
+                    },
+                    size: {
+                        random: true,
+                        value: 2,
+                    },
+                },
+                detectRetina: true,
+            }
+        );
+
+</script>
 </body>
 
 </html>
