--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     </div>
     <ul id="menu" class="shadow">
         <li>
+            <a href="#lead">Home</a>
+        </li>
+        <li>
             <a href="#about">About</a>
         </li>
         <li>
@@ -339,7 +342,7 @@
                         color: "#30a056",
                         distance: 150,
                         enable: true,
-                        opacity: 0.2,
+                        opacity: 0.4,
                         width: 1,
                     },
                     collisions: {
