--- a/index.html
+++ b/index.html
@@ -42,125 +42,126 @@
     </ul>
 </header>
 <!-- End header -->
-
-<div id="lead">
-    <div id="tsparticles">
-        <div id="lead-content">
-            <img class="user" src="./images/avatar.png">
-            <h2 style="margin-top: 2em">Hi, I'm Yichen Wu. I'm a</h2>
-            <h3>Software Developer | Gym Goer | Photophile | Melophile | Zoophilist | To Be Continued...</h3>
+<div class="hero-body">
+    <div id="tsparticles"></div>
+    <div class="container">
+        <div id="lead">
+            <div id="lead-content">
+                <img class="user" src="./images/avatar.png">
+                <h2 style="margin-top: 2em">Hi, I'm Yichen Wu. I'm a</h2>
+                <h3>Software Developer | Gym Goer | Photophile | Melophile | Zoophilist | To Be
+                    Continued...</h3>
+            </div>
         </div>
-    </div>
-</div>
-<!-- End #lead-content -->
-
-<!--    <div id="lead-overlay"></div>-->
-
-<div id="lead-down">
+        <!--    <div id="lead-overlay"></div>-->
+        <div id="lead-down">
             <span>
                 <i class="fa fa-chevron-down" aria-hidden="true"></i>
             </span>
-</div>
-<!-- End #lead-down -->
-
-<!-- End #lead -->
-
-<div id="about">
-    <h2 class="heading">About Me</h2>
-    <h3  style="margin-top: 2em; color: #dcd9d9">About Me pages on websites, blogs, and social media can be dry and boring
-        when they follow a standard format. If you want to create an unforgettable page for yourself or your
-        company, start by checking out some of the best examples of About Me pages on the web.</h3>
-    <div class="container">
-
-        <div class="row">
-            <div class="col-6 col-md-4"></div>
-            <div class="col-6 col-md-4"></div>
-            <div class="col-6 col-md-4"></div>
         </div>
-
-
-        <!--        <div class="row">-->
-        <!--            <div class="col-md-4">-->
-        <!--                <h2 class="heading">About Me</h2>-->
-        <!--            </div>-->
-        <!--            <div class="col-md-8">-->
-        <!--                <p>-->
-        <!--                    About me-->
-        <!--                </p>-->
-        <!--            </div>-->
-        <!--        </div>-->
     </div>
 </div>
-<!-- End #about -->
 
-<div id="experience" class="background-alt">
-    <h2 class="heading">Experience</h2>
-    <div id="experience-timeline">
-        <div data-date="September 2015 – September 2016">
-            <h3>Employer Name</h3>
-            <h4>Job Title</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet
-                urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi
-                dapibus porta quam laoreet placerat.
-            </p>
+<div class="hero-body">
+    <div class="container">
+        <div id="about">
+            <h2 class="heading">About Me</h2>
+            <div class="row">
+                <div class="col-2 text-truncate"
+                     style="margin: auto 5em; font-family: 'Raleway', Arial, sans-serif; color: #fcfcfc; letter-spacing: 0.1em; text-align: left">
+                    About Me pages on websites, blogs, and social media can be
+                    dry and
+                    boring
+                    when they follow a standard format. If you want to create an unforgettable page for yourself or your
+                    company, start by checking out some of the best examples of About Me pages on the web.
+
+                </div>
+            </div>
         </div>
+        <!-- End #about -->
 
-        <div data-date="September 2015 – September 2016">
-            <h3>Employer Name</h3>
-            <h4>Job Title</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet
-                urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi
-                dapibus porta quam laoreet placerat.
-            </p>
-        </div>
+        <div id="experience">
+            <h2 class="heading">Experience</h2>
+            <div id="experience-timeline">
+                <div data-date="September 2015 – September 2016">
+                    <h3>Employer Name</h3>
+                    <h4>Job Title</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam
+                        volutpat
+                        laoreet
+                        urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur
+                        libero.
+                        Morbi
+                        dapibus porta quam laoreet placerat.
+                    </p>
+                </div>
 
-        <div data-date="September 2015 – September 2016">
-            <h3>Employer Name</h3>
-            <h4>Job Title</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet
-                urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi
-                dapibus porta quam laoreet placerat.
-            </p>
+                <div data-date="September 2015 – September 2016">
+                    <h3>Employer Name</h3>
+                    <h4>Job Title</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam
+                        volutpat
+                        laoreet
+                        urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur
+                        libero.
+                        Morbi
+                        dapibus porta quam laoreet placerat.
+                    </p>
+                </div>
+
+                <div data-date="September 2015 – September 2016">
+                    <h3>Employer Name</h3>
+                    <h4>Job Title</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam
+                        volutpat
+                        laoreet
+                        urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur
+                        libero.
+                        Morbi
+                        dapibus porta quam laoreet placerat.
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
 </div>
 <!-- End #experience -->
 
-<div id="education">
-    <h2 class="heading">Education</h2>
-    <div class="education-block">
-        <h3>University of Ottawa</h3>
-        <span class="education-date">Sept 2016 - Sept 2017</span>
-        <h4>Bachelor of Science in Computer Science</h4>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet
-            urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi
-            dapibus porta quam laoreet placerat.
-        </p>
-    </div>
-    <!-- End .education-block -->
+<!--    <div id="education">-->
+<!--        <h2 class="heading">Education</h2>-->
+<!--        <div class="education-block">-->
+<!--            <h3>University of Ottawa</h3>-->
+<!--            <span class="education-date">Sept 2016 - Sept 2017</span>-->
+<!--            <h4>Bachelor of Science in Computer Science</h4>-->
+<!--            <p>-->
+<!--                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet-->
+<!--                urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi-->
+<!--                dapibus porta quam laoreet placerat.-->
+<!--            </p>-->
+<!--        </div>-->
+<!--        &lt;!&ndash; End .education-block &ndash;&gt;-->
 
-    <!--        <div class="education-block">-->
-    <!--            <h3>University of Ottawa</h3>-->
-    <!--            <span class="education-date">Sept 2016 - Sept 2017</span>-->
-    <!--            <h4>Bachelor of Science in Computer Science</h4>-->
-    <!--            <ul>-->
-    <!--                <li>-->
-    <!--                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.-->
-    <!--                </li>-->
-    <!--                <li>-->
-    <!--                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.-->
-    <!--                </li>-->
-    <!--                <li>-->
-    <!--                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.-->
-    <!--                </li>-->
-    <!--            </ul>-->
-    <!--        </div>-->
-    <!-- End .education-block -->
-</div>
+<!--        &lt;!&ndash;        <div class="education-block">&ndash;&gt;-->
+<!--        &lt;!&ndash;            <h3>University of Ottawa</h3>&ndash;&gt;-->
+<!--        &lt;!&ndash;            <span class="education-date">Sept 2016 - Sept 2017</span>&ndash;&gt;-->
+<!--        &lt;!&ndash;            <h4>Bachelor of Science in Computer Science</h4>&ndash;&gt;-->
+<!--        &lt;!&ndash;            <ul>&ndash;&gt;-->
+<!--        &lt;!&ndash;                <li>&ndash;&gt;-->
+<!--        &lt;!&ndash;                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.&ndash;&gt;-->
+<!--        &lt;!&ndash;                </li>&ndash;&gt;-->
+<!--        &lt;!&ndash;                <li>&ndash;&gt;-->
+<!--        &lt;!&ndash;                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.&ndash;&gt;-->
+<!--        &lt;!&ndash;                </li>&ndash;&gt;-->
+<!--        &lt;!&ndash;                <li>&ndash;&gt;-->
+<!--        &lt;!&ndash;                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.&ndash;&gt;-->
+<!--        &lt;!&ndash;                </li>&ndash;&gt;-->
+<!--        &lt;!&ndash;            </ul>&ndash;&gt;-->
+<!--        &lt;!&ndash;        </div>&ndash;&gt;-->
+<!--        &lt;!&ndash; End .education-block &ndash;&gt;-->
+<!--    </div>-->
 <!-- End #education -->
 
 <!--    <div id="projects" class="background-alt">-->
@@ -247,7 +248,7 @@
 <!--            </form>-->
 <!--        </div>-->
 <!-- End #contact-form -->
-</div>
+
 <!-- End #contact -->
 
 <footer>
@@ -375,6 +376,10 @@
                     },
                 },
                 detectRetina: true,
+            },
+            function (container) {
+                // container is the particles container where you can play/pause or stop/start.
+                // the container is already started, you don't need to start it manually.
             }
         );
 
