add more content

--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
         <div id="lead">
             <div id="lead-content">
                 <img class="user" src="./images/avatar.png">
-                <h2 style="margin-top: 2em">Hi, I'm Yichen Wu. I'm a</h2>
-                <h3>Software Developer | Gym Goer | Photophile | Melophile | Zoophilist | To Be
-                    Continued...</h3>
+                <h2 style="margin-top: 2em">Yichen Wu</h2>
+                <h3 id="whoIam"></h3>
             </div>
         </div>
         <!--    <div id="lead-overlay"></div>-->
@@ -65,191 +64,80 @@
 <div class="hero-body">
     <div class="container">
         <div id="about">
-            <h2 class="heading">About Me</h2>
-            <div class="row">
-                <div class="col-2 text-truncate"
-                     style="margin: auto 5em; font-family: 'Raleway', Arial, sans-serif; color: #fcfcfc; letter-spacing: 0.1em; text-align: left">
-                    About Me pages on websites, blogs, and social media can be
-                    dry and
-                    boring
-                    when they follow a standard format. If you want to create an unforgettable page for yourself or your
-                    company, start by checking out some of the best examples of About Me pages on the web.
-
-                </div>
-            </div>
-        </div>
-        <!-- End #about -->
-
-        <div id="experience">
-            <h2 class="heading">Experience</h2>
-            <div id="experience-timeline">
-                <div data-date="September 2015 – September 2016">
-                    <h3>Employer Name</h3>
-                    <h4>Job Title</h4>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam
-                        volutpat
-                        laoreet
-                        urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur
-                        libero.
-                        Morbi
-                        dapibus porta quam laoreet placerat.
-                    </p>
-                </div>
-
-                <div data-date="September 2015 – September 2016">
-                    <h3>Employer Name</h3>
-                    <h4>Job Title</h4>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam
-                        volutpat
-                        laoreet
-                        urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur
-                        libero.
-                        Morbi
-                        dapibus porta quam laoreet placerat.
-                    </p>
-                </div>
-
-                <div data-date="September 2015 – September 2016">
-                    <h3>Employer Name</h3>
-                    <h4>Job Title</h4>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam
-                        volutpat
-                        laoreet
-                        urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur
-                        libero.
-                        Morbi
-                        dapibus porta quam laoreet placerat.
-                    </p>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h2 class="heading">About Me</h2>
+                    </div>
+                    <div class="col-md-8">
+                        <p>First and foremost, I love writing code. Ever since writing my first "Hello World" in C, I
+                            have been passionated about building software that improves the lives of people around the
+                            world.
+                        </p>
+                        <p>This passion carried me through my education at Dublin City University where I studied
+                            different technologies, algorithms, compilers, higher mathematics.
+                        </p>
+                        <p>The passion remains with me in industry, I've worked as a
+                            backend developer on messaging systems, commercial APIs, event based systems,
+                            web services for the past 8 years. Currently, I work for Zalando as a scala developer based in
+                            Dublin, soaking up as much as knowledge and practice as I can in an attempt to perfect my craft.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+    <!-- End #about -->
+
+    <div id="experience">
+        <h2 class="heading">Experience</h2>
+        <div id="experience-timeline">
+            <div data-date="September 2015 – September 2016">
+                <h3>Employer Name</h3>
+                <h4>Job Title</h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam
+                    volutpat
+                    laoreet
+                    urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur
+                    libero.
+                    Morbi
+                    dapibus porta quam laoreet placerat.
+                </p>
+            </div>
+
+            <div data-date="September 2015 – September 2016">
+                <h3>Employer Name</h3>
+                <h4>Job Title</h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam
+                    volutpat
+                    laoreet
+                    urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur
+                    libero.
+                    Morbi
+                    dapibus porta quam laoreet placerat.
+                </p>
+            </div>
+
+            <div data-date="September 2015 – September 2016">
+                <h3>Employer Name</h3>
+                <h4>Job Title</h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam
+                    volutpat
+                    laoreet
+                    urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur
+                    libero.
+                    Morbi
+                    dapibus porta quam laoreet placerat.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
 </div>
 <!-- End #experience -->
-
-<!--    <div id="education">-->
-<!--        <h2 class="heading">Education</h2>-->
-<!--        <div class="education-block">-->
-<!--            <h3>University of Ottawa</h3>-->
-<!--            <span class="education-date">Sept 2016 - Sept 2017</span>-->
-<!--            <h4>Bachelor of Science in Computer Science</h4>-->
-<!--            <p>-->
-<!--                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet-->
-<!--                urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi-->
-<!--                dapibus porta quam laoreet placerat.-->
-<!--            </p>-->
-<!--        </div>-->
-<!--        &lt;!&ndash; End .education-block &ndash;&gt;-->
-
-<!--        &lt;!&ndash;        <div class="education-block">&ndash;&gt;-->
-<!--        &lt;!&ndash;            <h3>University of Ottawa</h3>&ndash;&gt;-->
-<!--        &lt;!&ndash;            <span class="education-date">Sept 2016 - Sept 2017</span>&ndash;&gt;-->
-<!--        &lt;!&ndash;            <h4>Bachelor of Science in Computer Science</h4>&ndash;&gt;-->
-<!--        &lt;!&ndash;            <ul>&ndash;&gt;-->
-<!--        &lt;!&ndash;                <li>&ndash;&gt;-->
-<!--        &lt;!&ndash;                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.&ndash;&gt;-->
-<!--        &lt;!&ndash;                </li>&ndash;&gt;-->
-<!--        &lt;!&ndash;                <li>&ndash;&gt;-->
-<!--        &lt;!&ndash;                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.&ndash;&gt;-->
-<!--        &lt;!&ndash;                </li>&ndash;&gt;-->
-<!--        &lt;!&ndash;                <li>&ndash;&gt;-->
-<!--        &lt;!&ndash;                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.&ndash;&gt;-->
-<!--        &lt;!&ndash;                </li>&ndash;&gt;-->
-<!--        &lt;!&ndash;            </ul>&ndash;&gt;-->
-<!--        &lt;!&ndash;        </div>&ndash;&gt;-->
-<!--        &lt;!&ndash; End .education-block &ndash;&gt;-->
-<!--    </div>-->
-<!-- End #education -->
-
-<!--    <div id="projects" class="background-alt">-->
-<!--        <h2 class="heading">Projects</h2>-->
-<!--        <div class="container">-->
-<!--            <div class="row">-->
-<!--                <div class="project shadow-large">-->
-<!--                    <div class="project-image">-->
-<!--                        <img src="images/project.jpg" />-->
-<!--                    </div>-->
-<!--                    &lt;!&ndash; End .project-image &ndash;&gt;-->
-<!--                    <div class="project-info">-->
-<!--                        <h3>Project Name Here</h3>-->
-<!--                        <p>-->
-<!--                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.-->
-<!--                        </p>-->
-<!--                        <a href="#">View Project</a>-->
-<!--                    </div>-->
-<!--                    &lt;!&ndash; End .project-info &ndash;&gt;-->
-<!--                </div>-->
-<!--                &lt;!&ndash; End .project &ndash;&gt;-->
-
-<!--                <div class="project shadow-large">-->
-<!--                    <div class="project-image">-->
-<!--                        <img src="images/project.jpg" />-->
-<!--                    </div>-->
-<!--                    &lt;!&ndash; End .project-image &ndash;&gt;-->
-<!--                    <div class="project-info">-->
-<!--                        <h3>Project Name Here</h3>-->
-<!--                        <p>-->
-<!--                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.-->
-<!--                        </p>-->
-<!--                        <a href="#">View Project</a>-->
-<!--                    </div>-->
-<!--                    &lt;!&ndash; End .project-info &ndash;&gt;-->
-<!--                </div>-->
-<!--                &lt;!&ndash; End .project &ndash;&gt;-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!-- End #projects -->
-
-<!--    <div id="skills">-->
-<!--        <h2 class="heading">Skills</h2>-->
-<!--        <ul>-->
-<!--            <li>JavaScript</li>-->
-<!--            <li>Python</li>-->
-<!--            <li>Ruby</li>-->
-<!--            <li>Go</li>-->
-<!--            <li>Node.js</li>-->
-<!--            <li>AngularJs</li>-->
-<!--            <li>React</li>-->
-<!--            <li>Elixir</li>-->
-<!--            <li>Java</li>-->
-<!--            <li>C</li>-->
-<!--            <li>C#</li>-->
-<!--            <li>C++</li>-->
-<!--            <li>Ruby on Rails</li>-->
-<!--            <li>JavaScript</li>-->
-<!--            <li>Python</li>-->
-<!--            <li>Ruby</li>-->
-<!--            <li>Go</li>-->
-<!--            <li>Node.js</li>-->
-<!--            <li>AngularJs</li>-->
-<!--            <li>React</li>-->
-<!--            <li>Elixir</li>-->
-<!--            <li>Java</li>-->
-<!--            <li>C</li>-->
-<!--            <li>C#</li>-->
-<!--            <li>C++</li>-->
-<!--            <li>Ruby on Rails</li>-->
-<!--        </ul>-->
-<!--    </div>-->
-<!-- End #skills -->
-
-<!--    <div id="contact">-->
-<!--        <h2>Get in Touch</h2>-->
-<!--        <div id="contact-form">-->
-<!--            <form method="POST" action="https://formspree.io/panghu1900@gmail.com">-->
-<!--                <input type="hidden" name="_subject" value="Contact request from personal website" />-->
-<!--                <input type="email" name="_replyto" placeholder="Your email" required>-->
-<!--                <textarea name="message" placeholder="Your message" required></textarea>-->
-<!--                <button type="submit">Send</button>-->
-<!--            </form>-->
-<!--        </div>-->
-<!-- End #contact-form -->
-
-<!-- End #contact -->
 
 <footer>
     <div class="container">
@@ -291,12 +179,44 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="js/scripts.min.js"></script>
+<script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
 <!-- first include tsParticles -->
 <script src="https://cdn.jsdelivr.net/npm/tsparticles"></script>
 
 <!-- then include jquery wrapper -->
 <script src="https://cdn.jsdelivr.net/npm/jquery-particles"></script>
 <script>
+    $(document).ready(function () {
+        var whoIam = document.getElementById('whoIam')
+
+        var typewriter = new Typewriter(whoIam, {
+            loop: true,
+            delay: 75,
+            // deleteAll: 'natural'
+        });
+        typewriter
+            .pauseFor(1500)
+            .typeString('Software Developer')
+            .pauseFor(1500)
+            .typeString(' | Gym Goer')
+            .pauseFor(1500)
+            .deleteChars(29)
+            .pauseFor(1500)
+            .typeString('Photophile')
+            .pauseFor(1500)
+            .typeString(' | Melophile')
+            .pauseFor(1500)
+            .deleteChars(22)
+            .pauseFor(1500)
+            .typeString('Zoophilist')
+            .pauseFor(1500)
+            .typeString(' | To Be Continued...')
+            .pauseFor(1500)
+            .deleteAll()
+            .start();
+    })
+
+
     $("#tsparticles")
         .particles()
         .init(
@@ -337,10 +257,10 @@
                 },
                 particles: {
                     color: {
-                        value: "#30a056",
+                        value: "#5f2ee7",
                     },
                     links: {
-                        color: "#30a056",
+                        color: "#fa2424",
                         distance: 150,
                         enable: true,
                         opacity: 0.4,
@@ -353,14 +273,14 @@
                         direction: "none",
                         enable: true,
                         outMode: "bounce",
-                        random: false,
+                        random: true,
                         speed: 1,
                         straight: false,
                     },
                     number: {
                         density: {
                             enable: true,
-                            value_area: 1800,
+                            value_area: 1600,
                         },
                         value: 80,
                     },
@@ -376,10 +296,6 @@
                     },
                 },
                 detectRetina: true,
-            },
-            function (container) {
-                // container is the particles container where you can play/pause or stop/start.
-                // the container is already started, you don't need to start it manually.
             }
         );
 
