--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
                     </div>
                     <div class="col-md-8">
                         <p>First and foremost, I love writing code. Ever since writing my first "Hello World" in C, I
-                            have been passionated about building software that improves the lives of people around the
+                            have been passionate about building software that improves the lives of people around the
                             world.
                         </p>
-                        <p>This passion carried me through my education at Dublin City University where I studied
+                        <p>The passion carried me through my education at Dublin City University where I studied
                             different technologies, algorithms, compilers, higher mathematics.
                         </p>
-                        <p>The passion remains with me in industry, I've worked as a
-                            backend developer on messaging systems, commercial APIs, event based systems,
-                            web services for the past 8 years. Currently, I work for Zalando as a scala developer based in
-                            Dublin, soaking up as much as knowledge and practice as I can in an attempt to perfect my craft.
+                        <p>The passion remains with me in the industry, I've worked as a
+                            backend developer on messaging systems, commercial APIs, event-based systems,
+                            web services for the past 8 years. Currently, I work for Zalando as a Scala developer based in
+                            Dublin, soaking up as much knowledge and practice as I can in an attempt to perfect my craft.
                         </p>
                     </div>
                 </div>
